# swagger

./: CMakeLists.txt  LICENSE  README.md
contrib/squirrel/sqstdlib/: sqstdio.cpp
doc/: protocol.md
firmware/arduino_nano/swdinterface/: low_level.cpp  low_level.h  mid_level.cpp  mid_level.h  protocol.h  swdinterface.ino
firmware/arduino_nano/swdtest/: swdtest.ino
include/: protocol.h
src/: cobs.cpp  cobs.h  hardwareinterface.cpp  hardwareinterface.h  main.cpp  squirrel_funcs.cpp  squirrel_funcs.h
targets/: init.nut  logging.nut  targetfuncs.nut  targets.nut  utils.nut
targets/nxp/: kinetis.nut  lpc13.nut  mkv10z.nut
